Make grid row height more dynamic and prevent top panel stretch

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@
     min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(9, 1fr);
+    /*grid-template-rows: repeat(9, 75px);*/
+    grid-auto-rows: fit-content;
+    grid-auto-flow: row;
     background-color: rgb(42, 74, 108);
 }
 .left-side-panel {
@@ -53,6 +55,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-auto-rows: 100px;
     gap: 15px;
 }
 .book-card {
